# pylox

./: .pre-commit-config.yaml  pyproject.toml
lox/: pylox.py  scanner.py  token.py  token_type.py
tests/: program.lox
